# localization_for_autonomous_driving

./: .clang-format  .gitignore  README.md
graph_based_localization/: CMakeLists.txt  README.md  package.xml
graph_based_localization/config/: sliding_window.yaml
graph_based_localization/include/graph_based_localization/: sliding_window.hpp  sliding_window_node.hpp
graph_based_localization/launch/: sliding_window.launch.py  sliding_window.rviz
graph_based_localization/src/: sliding_window.cpp  sliding_window_main.cpp  sliding_window_node.cpp
graph_based_localization/src/graph_optimizer/: ceres_graph_optimizer.cpp
imu_odometry/: CMakeLists.txt  README.md  package.xml
imu_odometry/include/imu_odometry/: imu_integration.hpp  imu_pre_integration.hpp
imu_odometry/src/: imu_integration.cpp  imu_pre_integration.cpp
kf_based_localization/: CMakeLists.txt  README.md  package.xml
kf_based_localization/config/: lidar_imu_fusion.yaml
kf_based_localization/include/kf_based_localization/: lidar_imu_fusion.hpp  lidar_imu_fusion_node.hpp
kf_based_localization/launch/: lidar_imu_fusion.launch.py  lidar_imu_fusion.rviz
kf_based_localization/scripts/: evo_ape.sh  evo_rpe.sh
kf_based_localization/src/: lidar_imu_fusion.cpp  lidar_imu_fusion_main.cpp  lidar_imu_fusion_node.cpp
kf_based_localization/src/kalman_filter/: eskf.cpp  imu_integration.cpp
lidar_localization/: CMakeLists.txt  README.md  package.xml
lidar_localization/config/: lidar_localization.yaml  matching.yaml
lidar_localization/include/lidar_localization/: lidar_localization.hpp  lidar_localization_node.hpp  matching.hpp  matching_node.hpp
lidar_localization/launch/: lidar_localization.launch.py  lidar_localization.rviz  matching.launch.py
lidar_localization/scripts/: evo_ape.sh  evo_rpe.sh  save_odometry.sh
lidar_localization/src/: lidar_localization.cpp  lidar_localization_main.cpp  lidar_localization_node.cpp  matching.cpp  matching_main.cpp  matching_node.cpp
lidar_mapping/: CMakeLists.txt  README.md  package.xml
lidar_mapping/config/: back_end.yaml  front_end.yaml  lidar_odometry.yaml  loop_closure.yaml
lidar_mapping/include/lidar_mapping/: back_end.hpp  back_end_node.hpp  front_end.hpp  front_end_node.hpp  lidar_key_frame_manager.hpp  loop_closure.hpp  loop_closure_node.hpp  map_generator.hpp
lidar_mapping/launch/: mapping.launch.py  mapping.rviz
lidar_mapping/scripts/: optimize_map.sh  save_map.sh  save_scan_context.sh
lidar_mapping/src/: back_end.cpp  back_end_main.cpp  back_end_node.cpp  front_end.cpp  front_end_main.cpp  front_end_node.cpp  lidar_key_frame_manager.cpp  loop_closure.cpp  loop_closure_main.cpp  loop_closure_node.cpp  map_generator.cpp
lidar_mapping/src/graph_optimizer/: g2o_graph_optimizer.cpp
lidar_odometry/: CMakeLists.txt  README.md  package.xml
lidar_odometry/config/: front_end.yaml  front_end_config.yaml  lidar_odometry.yaml
lidar_odometry/include/lidar_odometry/: front_end.hpp  front_end_node.hpp  lidar_odometry.hpp  lidar_odometry_node.hpp  loam_odometry.hpp  simple_odometry.hpp
lidar_odometry/launch/: front_end.launch.py  front_end.rviz  lidar_odometry.launch.py  lidar_odometry.rviz
lidar_odometry/scripts/: evo_ape.sh  evo_rpe.sh  save_odometry.sh
lidar_odometry/src/: front_end.cpp  front_end_main.cpp  front_end_node.cpp  lidar_odometry.cpp  lidar_odometry_main.cpp  lidar_odometry_node.cpp  loam_odometry.cpp  simple_odometry.cpp
localization_common/: CMakeLists.txt  package.xml
localization_common/include/localization_common/: data_synchronization.hpp  distortion_adjust.hpp  extrinsics_manager.hpp  kitti_preprocess_node.hpp  lidar_key_frame_manager.hpp  lidar_utils.hpp  msg_utils.hpp  odom_data_buffer.hpp  sensor_data_utils.hpp  simple_evaluator_node.hpp  tf_utils.hpp  tic_toc.hpp
localization_common/launch/: hello_kitti.launch.py  hello_kitti.rviz
localization_common/src/: data_synchronization.cpp  distortion_adjust.cpp  extrinsics_manager.cpp  hello_kitti_main.cpp  kitti_preprocess_main.cpp  kitti_preprocess_node.cpp  lidar_key_frame_manager.cpp  lidar_utils.cpp  msg_util.cpp  msg_utils.cpp  odom_data_buffer.cpp  sensor_data_utils.cpp  simple_evaluator_main.cpp  simple_evaluator_node.cpp  tf_utils.cpp  tic_toc.cpp
localization_common/src/cloud_filter/: box_filter.cpp  cloud_filter_factory.cpp  no_filter.cpp  voxel_filter.cpp
localization_common/src/cloud_registration/: cloud_registration_factory.cpp  icp_registration.cpp  icp_svd_registration.cpp  ndt_omp_registration.cpp  ndt_registration.cpp
localization_common/src/loam/: loam_feature_extraction.cpp  loam_registration.cpp
localization_common/src/publisher/: cloud_publisher.cpp  gnss_publisher.cpp  imu_publisher.cpp  key_frame_publisher.cpp  key_frames_publisher.cpp  lidar_frames_publisher.cpp  loop_candidate_publisher.cpp  loop_pose_publisher.cpp  odometry_publisher.cpp  path_publisher.cpp  pos_vel_publisher.cpp
localization_common/src/registration/: icp_registration.cpp  icp_svd_registration.cpp  ndt_omp_registration.cpp  ndt_registration.cpp  registration_factory.cpp
localization_common/src/sensor_data/: gnss_data.cpp  key_frame.cpp  loop_pose.cpp  pose_data.cpp  velocity_data.cpp
localization_common/src/subscriber/: cloud_subscriber.cpp  gnss_subscriber.cpp  imu_subscriber.cpp  key_frame_subscriber.cpp  key_frames_subscriber.cpp  lidar_frames_subscriber.cpp  loop_candidate_subscriber.cpp  loop_pose_subscriber.cpp  odometry_subscriber.cpp  (+4 more)
localization_interfaces/: CMakeLists.txt  package.xml
localization_interfaces/msg/: GnssData.msg  LidarFrame.msg  LidarFrames.msg  LoopCandidate.msg  PosVel.msg
localization_interfaces/srv/: SaveScanContext.srv
loosely_lio_mapping/: CMakeLists.txt  README.md  package.xml
loosely_lio_mapping/config/: lio_back_end.yaml
loosely_lio_mapping/launch/: lio_mapping.launch.py  lio_mapping.rviz
loosely_lio_mapping/src/: lio_back_end.cpp  lio_back_end_main.cpp  lio_back_end_node.cpp
scan_context/: CMakeLists.txt  package.xml
scan_context/proto/: key_frames.proto  ring_keys.proto
scan_context/src/: scan_context_manager.cpp
(+89 files in other folders)
