<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>localization_common</name>
  <version>0.1.0</version>
  <description>The localization_common package</description>
  <maintainer email="zhenpeng.ge@qq.com">Zhenpeng Ge</maintainer>
  <license>Apache-2.0</license>
  <author email="rq_ren@163.com">Ren Qian</author>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>pcl_ros</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>localization_interfaces</depend>
  <depend>ndt_omp_ros2</depend>
  <depend>yaml-cpp</depend>
  <depend>geographiclib</depend>
  <depend>libceres-dev</depend>
  <depend>sophus</depend>

  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
